--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "undefined/blob/master/LICENSE-MIT"
+      "url": "https://github.com/paulyoung/noflo-framer/blob/master/LICENSE-MIT"
     }
   ],
   "scripts": {
